compiler/test_files/typing/bad/testfile-redef-7.psc

i32 f(i32 x, i32 y, i32 x) {
  return 0;
}
i32 main() {
  f(1, 2, 3);
}
